Fixed Layout of About me page
Might still look weird

--- a/css/style.css
+++ b/css/style.css
@@ -68,9 +68,9 @@ h {
   text-align: center;
   position: block;
   margin: auto;
-  margin-top: 100px;
-  margin-bottom: 50px;
-  font-size: 70px;
+  margin-top: 10%;
+  margin-bottom: 5%;
+  font-size: 400%;
   font-family: "HP Simplified";
   font-family: 'Trebuchet MS', sans-serif;
   font-weight: bold;
@@ -86,49 +86,7 @@ border-radius: 3%;
 /************
 Hoverable
 *************/
-/*
-h1 {
-  margin-left: 40px;
-  margin-top: 150px;
-  font-size: 70px;
-  font-family: "HP Simplified";
-  font-family: 'Trebuchet MS', sans-serif;
-  float: left;
-  padding: 10px;
-  border-radius: 15%;
-  border: 10px solid #68D4FF;
-  background-color: white;
 
-} */
-
-
-/* h1 .tooltiptext {
-  visibility: hidden;
-  font-size: 20px;
-  width: 160px;
-  background-color: white;
-  color: #68D4FF;
-  text-align: left;
-  border-radius: 6px;
-  padding: 5px 0;
-
-  Position the tooltip
-  position: absolute;
-  z-index: 1;
-} */
-
-/* h1:hover .tooltiptext{
-  visibility: visible;
-
-}
-
-h1:hover{
-  color: #white;
-  background-color: #68D4FF;
-  border: 10px solid white;
-  cursor: pointer;
-
-} */
 .scroll {
   margin-left: 40px;
   margin-top: 150px;
@@ -177,15 +135,12 @@ h1:hover{
 }
 
 a {
-
-
 	font-weight: bold;
-	padding: 1px;
+	padding: 1%;
 	border-radius: 15%;
 	border: 5px solid #68D4FF;
 	background-color: white;
 	font-family: HappyMarker;
-
 }
 
 a:link {
@@ -220,21 +175,25 @@ a:active {
 
 }
 
+.CV{
+  float: right;
+  text-align: right;
+  margin-right: 17%;
+  margin-top: 1%;
+}
+
 .download {
 position: absolute;
-padding-top:90px;
-padding-bottom:90px;
-padding-left:10px;
-padding-right:10px;
-margin:30px;
+padding-top:5%;
+padding-bottom:5%;
 background-color: #68D4FF;
 border: 10px solid white;
 border-radius: 50%;
 z-index: 1;
-font-size:30px;
+font-size:200%;
 font-family: HappyMarker;
-
 }
+
 .download:hover {
 
   border: 10px solid #68D4FF;
@@ -242,6 +201,75 @@ font-family: HappyMarker;
   color: #68D4FF;
 
 }
+
+
+.linkBox {
+  position: absolute;
+  display: inline-block;
+  float: right;
+  text-align: right;
+  margin-right: 0%;
+  margin-left: 49%;
+  margin-top: 15%;
+  z-index: 2;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+
+}
+
+.links > .l1 {
+  display: block;
+  color: black;
+  text-align:center;
+  padding-top: 35%;
+  padding-bottom: 35%;
+  padding-left: 10%;
+  padding-right: 8%;
+  font-size: 180%;
+  background: #B27AFF;
+  border: 10px solid white;
+  border-radius: 50%;
+  z-index: 2;
+}
+
+.links > .l2 {
+  display: block;
+  color: black;
+  text-align:center;
+  padding-top: 35%;
+  padding-bottom: 35%;
+  padding-right: 40%;
+  font-size: 180%;
+  background: #B27AFF;
+  border: 10px solid white;
+  border-radius: 50%;
+  z-index: 2;
+}
+
+.links > .l3 {
+  display: block;
+  color: black;
+  text-align:center;
+  padding-top: 35%;
+  padding-bottom: 35%;
+  padding-left: 11%;
+  padding-right: 20%;
+  font-size: 180%;
+  background: #B27AFF;
+  border: 10px solid white;
+  border-radius: 50%;
+  z-index: 2;
+}
+
+.links a:hover {
+  border: 10px solid #B27AFF;
+  background-color: white;
+  color: #B27AFF;
+	}
 
 
 
@@ -281,28 +309,21 @@ Art Presentation
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  margin-top: 10px;
-  margin-left: 250px;
-  margin-right: 250px;
+  margin-left: 20%;
+  margin-right: 20%;
   background-color: #f5f5f5;
   border: 5px solid black;
-  border-radius: 20px;
+  border-radius: 2%;
   z-index: 1;
-
-
 }
 
  .art > .ref {
-
   margin: 30px;
-
 }
 
 .art > .ref2 {
-
  margin: 30px;
  margin-bottom: 200px;
-
 }
 
 
@@ -346,11 +367,11 @@ p {
 
 .para {
   color: #303030;
-  margin:0px;
-  margin-left: 40px;
-  margin-right: 40px;
-  font-size: 25px;
-  text-indent: 45px;
+  margin:0%;
+  margin-left: 4%;
+  margin-right: 4%;
+  font-size: 170%;
+  text-indent: 10%;
   line-height: 2;
   text-align: justify;
 }
